Update README.txt
Former-commit-id: 977436c0aa298135cbdb7bc822fb529217b5755a